--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,11 @@
-name=SparkFun Template Arduino Library
+name=SparkFun Authentication Coprocessor Arduino Library
 version=1.0.0
 author=SparkFun Electronics <techsupport@sparkfun.com>
 maintainer=SparkFun Electronics <sparkfun.com>
-sentence=TODO: Add short description
-paragraph=TODO: Add long description
-category=TODO: Add category (Sensors, Display, Communication, etc.)
-url=TODO: Add URL
-architectures=TODO: Add architectures (*, esp32, teensy, stm32, megaavr, etc.)
+sentence=An Arduino library for the Auth 3.0 CP
+paragraph=An Arduino library for the Auth 3.0 CP
+category=Communication
+url=https://github.com/sparkfun/SparkFun_Authentication_Coprocessor_Arduino_Library
+architectures=esp32
+precompiled=true
+depends=SparkFun Toolkit (>=1.0.0)
