--- a/.github/workflows/cross-compilation.yml
+++ b/.github/workflows/cross-compilation.yml
@@ -31,12 +31,12 @@ jobs:
               - name: esp32:esp32
                 source-url: https://raw.githubusercontent.com/espressif/arduino-esp32/gh-pages/package_esp32_index.json
 
-          # ESP32-C3
-          # https://github.com/espressif/arduino-esp32/blob/master/boards.txt
-          - fqbn: esp32:esp32:esp32c3
-            platforms: |
-              - name: esp32:esp32
-                source-url: https://raw.githubusercontent.com/espressif/arduino-esp32/gh-pages/package_esp32_index.json
+          # # ESP32-C3
+          # # https://github.com/espressif/arduino-esp32/blob/master/boards.txt
+          # - fqbn: esp32:esp32:esp32c3
+          #   platforms: |
+          #     - name: esp32:esp32
+          #       source-url: https://raw.githubusercontent.com/espressif/arduino-esp32/gh-pages/package_esp32_index.json
 
     steps:
       - name: Checkout
